# Gelato_AI_GalGame

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  开发路线.md  核心架构和可行性分析.md  目前已经完成的.md  需求分析.md
